--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,8 @@
 [versions]
 agp = "8.9.1"
 billing = "8.0.0"
-kotlin = "2.0.21"
+coilCompose = "2.7.0"
+kotlin = "2.1.0"
 coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
@@ -15,7 +16,7 @@ playServicesAds = "24.7.0"
 playServicesAuth = "21.4.0"
 roomKtxVersion = "2.6.1"
 roomRuntime = "2.8.2"
-ksp = "2.0.21-1.0.27"
+ksp = "2.1.0-1.0.29"
 lottieCompose = "6.1.0"
 firebase-bom = "33.5.1"
 retrofit = "2.9.0"
@@ -30,7 +31,9 @@ androidx-room-ktx-v261 = { module = "androidx.room:room-ktx", version.ref = "roo
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
 billing = { module = "com.android.billingclient:billing", version.ref = "billing" }
 billing-ktx = { module = "com.android.billingclient:billing-ktx", version.ref = "billing" }
+coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 firebase-auth-ktx = { module = "com.google.firebase:firebase-auth-ktx" }
+firebase-config-ktx = { module = "com.google.firebase:firebase-config-ktx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
